re PR c++/66957 (incorrect "is protected within this context" error)

PR c++/66957
	* search.c (protected_accessible_p): Revert fix for 38579.

From-SVN: r226974